# the3weeks

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  credits
graphics/: Logo.kra  Logo.kra~
ssins-bind/: Cargo.toml
ssins-bind/src/: lib.rs
ssins-frontend/: Cargo.toml
ssins-frontend/src/: lib.rs
ssins-shared/: Cargo.toml
ssins-shared/src/: lib.rs
ssins-shared/src/app/: cookie.rs  mod.rs  state.rs
ssins-shared/src/macros/: mod.rs
ssins-shared/src/user/: auth.rs  mod.rs
ssins-webserver/: Cargo.toml
ssins-webserver/migrations/: 20250709001_user_init.up.sql  20250715001_session_init.up.sql
ssins-webserver/src/: main.rs
ssins-webserver/src/user/: storage.rs
style/: main.scss  peepeepoopoo.scss  vfs.scss
thrw-bind/: Cargo.toml
thrw-bind/src/: lib.rs
thrw-frontend/: Cargo.toml
thrw-frontend/src/: lib.rs
thrw-frontend/src/api/: mod.rs
thrw-frontend/src/components/: navbar.rs
thrw-frontend/src/routes/: home.rs  invalid.rs  login.rs  mod.rs  register.rs
thrw-frontend/src/routes/account/: mod.rs
thrw-frontend/src/routes/admin/: keys.rs  mod.rs
thrw-frontend/src/routes/chat/: mod.rs
thrw-frontend/src/routes/filesystem/: mod.rs
thrw-frontend/src/storage/: logs.rs  mod.rs
thrw-frontend/src/util/: mod.rs
thrw-shared/: Cargo.toml
thrw-shared/src/: lib.rs
thrw-shared/src/app/: cookie.rs  media_request.rs  mod.rs  state.rs
thrw-shared/src/downloader/: api.rs  mod.rs
thrw-shared/src/media/: mod.rs  util.rs
thrw-shared/src/user/: api.rs  auth.rs  mod.rs
thrw-shared/src/util/: mod.rs
thrw-shared/src/vfs/: api.rs  mod.rs  util.rs
thrw-shared/src/ws/: mod.rs
thrw-webserver/: Cargo.toml
thrw-webserver/migrations/: 20250709001_user_init.down.sql  20250709001_user_init.up.sql  20250715001_session_init.up.sql  20250804001_vfs_init.down.sql  20250804001_vfs_init.up.sql  20250804002_key_chain.down.sql  20250804002_key_chain.up.sql
thrw-webserver/src/: main.rs
thrw-webserver/src/cookie/: mod.rs
thrw-webserver/src/downloader/: mod.rs
thrw-webserver/src/state/: mod.rs
thrw-webserver/src/ws/: mod.rs
thrw_vault/.obsidian/: workspace.json
