[package]
name = "ssins-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
ssins-shared = { path = "../ssins-shared" }
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
log.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, optional = true }
argon2.workspace = true
chrono.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate"]
server = [ "sqlx", "leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum"]