[package]
name = "ssins-shared"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sqlx = { workspace = true, optional = true }
leptos.workspace = true
axum = { workspace = true, optional = true }
axum-extra = { workspace = true, optional = true }
leptos_axum = { workspace = true, optional = true }
leptos-use = { workspace = true, optional = true, features = ["ssr"] }
cookie = { workspace = true, optional = true }
axum-core = { workspace = true, optional = true }
argon2.workspace = true
uuid = { workspace = true, optional = true }
chrono.workspace = true


[features]
server = [
	"sqlx",
	"leptos/ssr", "leptos-use", "leptos_axum",
	"axum", "axum-extra", "axum-core",
	"cookie",
	"uuid"
]