[package]
name = "ssins-webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssins-shared = { path = "../ssins-shared", default-features = false, features = ["server"] }
ssins-frontend = { path = "../ssins-frontend", default-features = false, features = ["server"] }
leptos = { workspace = true, features = ["ssr"] }
leptos_axum.workspace = true
leptos_meta.workspace = true
axum.workspace = true
axum-extra.workspace = true
axum-core.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
cookie.workspace = true
leptos-use.workspace = true
argon2.workspace = true
uuid.workspace = true

dotenvy = "0.15.7"
serde = "1.0.219"

