[package]
name = "thrw-shared"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sqlx = { workspace = true, optional = true }
leptos.workspace = true
axum = { workspace = true, optional = true }
axum-extra = { workspace = true, optional = true }
leptos_axum = { workspace = true, optional = true }
leptos-use = { workspace = true, optional = true, features = ["ssr"] }
cookie = { workspace = true, optional = true }
axum-core = { workspace = true, optional = true }
argon2.workspace = true
uuid.workspace = true
tokio = { workspace = true, optional = true, features = ["full"] }
chrono.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true

gloo-utils = { workspace = true, optional = true }
gloo-timers = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }
youtube_dl = { workspace = true, optional = true }
const_format.workspace = true
ffmpeg-sidecar = { workspace = true, optional = true }
anyhow.workspace = true


[features]
default = [
	"gloo-utils",
	"gloo-timers",
	"web-sys",
	"uuid/js"
]
server = [
	"sqlx",
	"leptos/ssr", "leptos-use", "leptos_axum",
	"axum", "axum-extra", "axum-core",
	"cookie",
	"tokio",
	"youtube_dl",
	"ffmpeg-sidecar",
]