[package]
name = "thrw-webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thrw-shared = { path = "../thrw-shared", default-features = false, features = ["server"] }
thrw-frontend = { path = "../thrw-frontend", default-features = false, features = ["server"] }
leptos = { workspace = true, features = ["ssr"] }
leptos_axum.workspace = true
leptos_meta.workspace = true
axum.workspace = true
axum-extra.workspace = true
axum-core.workspace = true
tokio = { workspace = true, features = ["full"]}
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
cookie.workspace = true
leptos-use.workspace = true
argon2.workspace = true
uuid.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true

youtube_dl.workspace = true
const_format.workspace = true
ffmpeg-sidecar.workspace = true
anyhow.workspace = true
futures.workspace = true
infer.workspace = true

dotenvy = "0.15.7"

